Lägg till länkavsnitt för GitHub och Webshare
Skapa en CSS-sektion för länkavsnittet (#links) med flexbox-layout, absolut positionering längst ner på sidan och mellanrum mellan länkarna.
Lägg till HTML-element för länkavsnittet med länkar till GitHub och Webshare.

--- a/common.html
+++ b/common.html
@@ -13,6 +13,10 @@
         <a href="clear/clear.html">Clear</a>
         <a href="addUpTo/addUpTo.html">Add up to</a>
     </div>
+    <div id="links">
+        <a href="https://github.com/moaehrenbrand/ProjektDDU2">Github</a>
+        <a href="http://webshare.mah.se/aq4440/ProjektDDU2/common.html">Webshare</a>
+    </div>
    <script src="common.js"></script>
 </body>
 </html>
