Skapat home länken i javascript istället för html
Tog bort länken från html dokumenten och skapade den med javascript istället

--- a/findSame/findSame.html
+++ b/findSame/findSame.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="findSame.css">
 </head>
 <body>
-    <div class="sides">
-        <a href="../common.html">Home</a>
-    </div>
+    <div class="sides"></div>
     <div id="header"></div>
     <div id="findSame">
         <p id="copies">Click on a number to find copies</p><button id="buttonReset">Reset</button>
