--- a/remove/remove.html
+++ b/remove/remove.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="remove.css">
 </head>
 <body>
-    <div class="sides">
-        <a href="../common.html">Home</a>
-    </div>
+    <div class="sides"></div>
     <div id="header"></div>
     <div id="remove">
         <button id="newNumber">New Random Number</button>
