--- a/addUpTo/addUpTo.html
+++ b/addUpTo/addUpTo.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="addUpTo.css">
 </head>
 <body>
-    <div class="sides">
-        <a href="../common.html">Home</a>
-    </div>
+    <div class="sides"></div>
     <div id="header"></div>
     <div id="addUp">
         <p>Add up to:<input type="text" id="inputAdd"><button id="buttonAdd">Find Two Cells That Add Up To</button></p>
