--- a/sum/sum.html
+++ b/sum/sum.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="sum.css">
 </head>
 <body>
-    <div class="sides">
-        <a href="../common.html">Home</a>
-    </div>
+    <div class="sides"></div>
     <div id="header"></div>
     <div id="sumOfAll">
         <p>Sum of all:</p>
